--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
         }
     ],
     "require-dev": {
-        "symfony/var-dumper": "^7.2"
+        "roave/security-advisories": "dev-latest",
+        "symfony/var-dumper": "^7.2",
+        "phpstan/phpstan": "^2.1",
+        "friendsofphp/php-cs-fixer": "^3.69"
+    },
+    "require": {
+        "guzzlehttp/guzzle": "^7.9"
     }
 }
