--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
             "name": "Maxim Golev"
         }
     ],
+    "scripts": {
+        "stan": "phpstan analyze src --memory-limit=512m",
+        "fix": "vendor/bin/php-cs-fixer fix src",
+        "all": "composer stan && composer fix"
+    },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "symfony/var-dumper": "^7.2",
