--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "friendsofphp/php-cs-fixer": "^3.69"
     },
     "require": {
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9"
     }
 }
