--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "symfony/var-dumper": "^7.2",
         "phpstan/phpstan": "^2.1",
         "friendsofphp/php-cs-fixer": "^3.69",
-        "phpunit/phpunit": "^11.5",
-        "ext-http": "*"
+        "phpunit/phpunit": "^11.5"
     },
     "require": {
         "php": "^8.2",
